fix api follow new enpoint be
